--- a/fmvc.fsproj
+++ b/fmvc.fsproj
@@ -8,11 +8,13 @@
     <Compile Include="Models/ErrorViewModel.fs" />
     <Compile Include="Models\HomeViewModel.fs" />
     <Compile Include="Controllers/HomeController.fs" />
+    <Compile Include="GiraffeRazor.fs" />
     <Compile Include="NameService.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Giraffe" Version="6.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="8.0.0" />
     <PackageReference Include="Westwind.AspNetCore.LiveReload" Version="0.5.0" />
   </ItemGroup>
